k8s/components/traefik-hsts/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bugsink
  namespace: bugsink
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: bugsink-hsts@kubernetescrd
